# KW-SE-project-2021

./: .env  .gitignore  README.md  deploy.sh  docker-compose.yml  issue-cert.sh
Spring/kw/: build.gradle  settings.gradle
back/kw/: build.gradle
deployments/auth/: Dockerfile  pyproject.toml
deployments/auth/app/: main.py  model.py
deployments/controller/kw/: .gitignore  Dockerfile  build.gradle
deployments/db/: Dockerfile  init.sh  schema.sql
deployments/db/dummy_data/: dummy_bookmark.csv  dummy_goods.csv  dummy_goods_category.csv  dummy_member.csv
deployments/gw/: config.yml
deployments/gw/certs/: local-cert.pem  local-key.pem
deployments/traefik/: config.yml
deployments/traefik/certs/: local-cert.pem  local-key.pem
deployments/view/: .eslintrc.js  Dockerfile  bash.exe.stackdump  package-lock.json  package.json  vue.config.js
deployments/view/src/: router.js
front_vue/: package-lock.json  package.json
front_vue/public/: index.html
front_vue/public/api/: best-product.json  products.json
front_vue/src/: App.vue  main.js  router.js
front_vue/src/api/: banner.js  http.js
front_vue/src/components/: Header.vue  LoginForm.vue  Product.vue  SignupForm.vue
front_vue/src/views/: Features.vue  Home.vue  Shop.vue  SignupPage.vue
shoppingmall_front/: .eslintrc.js  README.md  package-lock.json  package.json
shoppingmall_front/public/: index.html
shoppingmall_front/src/: App.vue  main.js
shoppingmall_front/src/components/: LoginForm.vue
shoppingmall_front/src/routes/: index.js
src/auth/: main.py  pyproject.toml
src/db/: schema.sql
(+126 files in other folders)
