[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Jung Dong Ho <dongho971220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-oauthlib = "^1.3.0"
PyJWT = "^2.1.0"
fastapi = "^0.65.1"
uvicorn = { extras = ["standard"], version = "^0.13.4" }
cryptography = "^3.4.7"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
